--- a/3_DT/DT_BankLoans.Rmd
+++ b/3_DT/DT_BankLoans.Rmd
@@ -155,3 +155,8 @@ credit_model_rules
 summary(credit_model_rules)
 ```
 
+
+
+
+References
+https://cran.r-project.org/web/packages/C50/vignettes/C5.0.html
