--- a/3_DT/DT_BankLoans.Rmd
+++ b/3_DT/DT_BankLoans.Rmd
@@ -25,6 +25,7 @@ library(ggplot2)
 #install.packages("C50") # for DT algorithm
 library(C50)
 library(caret)
+#install.packages('pROC')
 library(pROC)
 library(dplyr)
 ```
@@ -176,8 +177,8 @@ probs <- predict(credit_boost10, credit_test, type = "prob")
 # plot ROC curve
 pred <- ROCR::prediction(probs[, 2], credit_test$default)
 perf_dt_10 <- ROCR::performance(pred,  'tpr',  'fpr')
-#plot(perf_dt_10) complains about coersing s4 into numeric, so we did it manually
-plot(perf_dt_10@x.values[[1]], perf_dt_10@y.values[[1]], type = "l")
+#plot(perf_dt_10) #complains about coersing s4 into numeric, so we did it manually
+plot(perf_dt_10@x.values[[1]], perf_dt_10@y.values[[1]], xlab = perf_dt_10@x.name[[1]], ylab = perf_dt_10@y.name[[1]], type = "l")
 ROCR::performance(pred, 'auc')
 ```
 
@@ -198,7 +199,7 @@ probs_1 <- predict(credit_model, credit_test, type = "prob")
 pred_1 <- ROCR::prediction(probs_1[, 2], credit_test$default)
 perf_dt_1 <- ROCR::performance(pred_1,  'tpr',  'fpr')
 #plot(perf_dt_1)
-plot(perf_dt_1@x.values[[1]], perf_dt_1@y.values[[1]], type = "l" )
+plot(perf_dt_1@x.values[[1]], perf_dt_1@y.values[[1]],  xlab = perf_dt_10@x.name[[1]], ylab = perf_dt_10@y.name[[1]], type = "l" )
 ROCR::performance(pred_1, 'auc')
 ```
 
