--- a/5_Regression/LinReg_MedicalExpenses.Rmd
+++ b/5_Regression/LinReg_MedicalExpenses.Rmd
@@ -1,11 +1,92 @@
 ---
 title: "Linear Regression to PRedict Medical Expenses"
-output: html_notebook
+output: github_document
+
 ---
 
-```{r load file}
-insruance <- read.csv(file = "Data/insurance.csv", stringsAsFactors = TRUE  )
-str(insruance)
+```{r}
+# check.packages function: install and load multiple R packages.
+# Check to see if packages are installed. Install them if they are not, then load them into the R session.
+check.packages <- function(pkg){
+    new.pkg <- pkg[!(pkg %in% installed.packages()[, "Package"])]
+    if (length(new.pkg)) 
+        install.packages(new.pkg, dependencies = TRUE)
+    sapply(pkg, require, character.only = TRUE)
+}
 
+# Usage example
+#packages<-c("ggplot2", "afex", "ez", "Hmisc", "pander", "plyr")
+#check.packages(packages)
+```
+
+
+```{r loading libraries}
+check.packages(c("psych"))
+```
+
+
+```{r load file}
+insurance <- read.csv(file = "Data/insurance.csv", stringsAsFactors = TRUE  )
+str(insurance)
+
+```
+```{r summary}
+summary(insurance)
+hist(insurance$expenses)
+```
+we need to convert all features into numeric
+
+```{r table for region}
+table(insurance$region)
+```
+
+```{r correlation matrix}
+cor(insurance[c("age", "bmi", "children", "expenses")])
+```
+
+```{r, scatter plot matrix}
+pairs(insurance[c("age","bmi","children","expenses")])
+```
+
+
+```{r}
+# From psych package
+
+pairs.panels(insurance[c("age", "bmi", "children", "expenses")])
+
+```
+
+```{r Building linear regression model}
+ins_model <- lm(expenses ~ . , data = insurance)
+ins_model
+```
+
+Notice how the model has introduced new features such as (smokeryes) and (regionnorthwest) due to dummy coding. So the reference category we are not seeing here is (femae, smokerno, northeast) so a make pays 131.4 less than sexfemale etc
+
+```{r}
+summary(ins_model)
+```
+
+Notice we have few p-values (Pr(>|t|) much less than the significant level. Which indicated that the feature is very unlikely to be irrelevant for the target
+
+To improve the results we add non-linear term for age
+
+```{r creae age squared variable}
+insurance$age2 <- insurance$age^2
+```
+
+convert numeric to binary for bmi to indicate obesity 
+```{r conver bmi to binary}
+insurance$bmi30 <- ifelse(insurance$bmi >= 30, 1, 0)
+```
+
+we can also add few interaction terms (example bmi30*smoke). Obesity and smoking
+
+```{r}
+ins_model12 <- lm(expenses ~ age + age2 + children + bmi + sex + bmi30*smoker + region, data = insurance)
+summary(ins_model12)
+```
+```{r}
+insurance$age2
 ```
 
