Adding more descriptive statistics to AR

--- a/9_AR/AR_MarketBasket.Rmd
+++ b/9_AR/AR_MarketBasket.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "AR_MarketBastet"
-output: html_notebook
+author: "Mohammed Zakaria"
+output: github_document
 ---
 
 Our market basket analysis will utilize the purchase data from one month of operation for a grocery store. We will see that we have about 9835 transaction during that period. or about 30-50 per hour (depending on how many hours it operates). This indicates a medium size store. 
@@ -21,5 +22,23 @@ as(Groceries[1:10], "list")
 
 Number of rows means how many transactions we have. Number of columns means how many different items we might have in each transaction. The density of 0.02609146 indicates the ratio of nonzero matrix cells to total number of elements in the matrix ( which is equal to columns* rows = 1662115).
 Total number of items purchased = 1662115* density = 43367
-Average transaction contains 43367 / 9835 = 4.41
+Average transaction contains 43367 / 9835 = 4.41 (which is the same value that summary gives us)
+
+using inspect to see fea transaction records
+
+```{r}
+inspect(Groceries[1:5])
+```
+
+if we want to see the specific columns of the data, you can use [raw, column] notation. We can combine this with itemFrequency() to see the proportions of the transactions that contain the item
+
+```{r}
+inspect(Groceries[1:5, 1:3])
+```
+
+```{r}
+itemFrequency(Groceries[, 1:4])
+```
+
+Notice that the sparce matrix columns are sorted in alphabetical order.
 
