--- a/ClustetingWithKmeans_SocialNetwork.Rmd
+++ b/ClustetingWithKmeans_SocialNetwork.Rmd
@@ -1,14 +1,26 @@
 ---
 title: "Clustering With kMeans"
-output: html_notebook
+author: "Mohammed Zakaria"
+#output:
+#  html_document:
+#    df_print: paged
+#    toc: yes
+#    keep_md: true
+   
+  
+#  html_notebook:
+#    highlight: espresso
+#    theme: readable
+#    toc: yes
+output: github_document
 ---
 
 
 This exercise uses data from a Social Networking Service (SNS) that is assumed to represent a wide cross section of American adolescents in 2006. The data was collected by Brett Lantz (see Machine Learning using R, Ch 9 2nd ed.) The data was sampled evenly aross four high school graduation years (2006 - 2009).
 
 ```{r Exploring data}
-
-
+teens <- read.csv(file="C:/Users/mkzak/Documents/GitHub/FunWithR/FunWithR/10_kMeans/Data/snsdata.csv", stringsAsFactors = FALSE)
+str(teens)
 ```
 
 
