--- a/3_DT/DT_BankLoans.Rmd
+++ b/3_DT/DT_BankLoans.Rmd
@@ -235,17 +235,17 @@ This post suggests a fix: https://stackoverflow.com/questions/32633764/error-in-
 
 ```{r}
 # plot ROC for each method
-roc_dt_1   <- data.frame(fpr=unlist(perf_dt_1@x.values), tpr=unlist(perf_dt_1@y.values))
+roc_dt_1   <- data.frame(fpr = unlist(perf_dt_1@x.values), tpr = unlist(perf_dt_1@y.values))
 roc_dt_1$method <- "DT 1"
-roc_dt_10 <- data.frame(fpr=unlist(perf_dt_10@x.values), tpr=unlist(perf_dt_10@y.values))
+roc_dt_10 <- data.frame(fpr = unlist(perf_dt_10@x.values), tpr = unlist(perf_dt_10@y.values))
 roc_dt_10$method <- "DT 10"
 rbind(roc_dt_1, roc_dt_10) %>%
-  ggplot(data=., aes(x=fpr, y=tpr, linetype=method, color=method)) + 
+  ggplot(data = ., aes(x = fpr, y = tpr, linetype = method, color = method)) + 
   geom_line() +
-  geom_abline(a=1, b=0, linetype=2) +
-  scale_x_continuous(labels=scales::percent, lim=c(0,1)) +
-  scale_y_continuous(labels=scales::percent, lim=c(0,1)) +
-  theme(legend.position=c(0.8,0.2), legend.title=element_blank())
+  geom_abline(a = 1, b = 0, linetype = 2) +
+  scale_x_continuous(labels = scales::percent, lim = c(0,1)) +
+  scale_y_continuous(labels = scales::percent, lim = c(0,1)) +
+  theme(legend.position = c(0.8,0.2), legend.title = element_blank())
 ```
 
 Next we consider tuning the DT model. Based on the caret package
@@ -256,12 +256,12 @@ modelLookup("C5.0")
 ```
 
 We have 3 parameters to tune in C5.0 decision trees implementation:  
-1- trials: an integer specifying the number of boosting iterations. A value of one indicates that a single model is used  
-2- model from caret git hub page https://github.com/topepo/caret/blob/master/models/files/C5.0.R seems there are two value: rules, tree  
-3- winnow: A logical: should predictor winnowing (i.e feature selection) be used?  
+1. trials: an integer specifying the number of boosting iterations. A value of one indicates that a single model is used  
+2. model from caret git hub page https://github.com/topepo/caret/blob/master/models/files/C5.0.R seems there are two value: rules, tree    
+3. winnow: A logical: should predictor winnowing (i.e feature selection) be used?  
 
 ```{r Tuning 3 parameters with caret default, message=FALSE, warning=FALSE, paged.print=FALSE}
-credit_classifier3<- train(credit_train[-21], credit_train$default , method = "C5.0", verbose = FALSE)
+credit_classifier3 <- train(credit_train[-21], credit_train$default , method = "C5.0", verbose = FALSE)
 # we can do our own grid 
 #grid <- expand.grid( .winnow = c(TRUE,FALSE), .trials=c(1,5,10,15,20), .model="tree" )
 #credit_classifier3<- train(credit_train[-21], credit_train$default , method = "C5.0", verbose = FALSE, tuneGrid = grid)
@@ -275,8 +275,8 @@ CrossTable(credit_test$default, credit_test_pred3, prop.chisq = FALSE, prop.c = 
 
 ```{r tuning using ROC}
 ctrl <- trainControl(method = "cv",   
-                     summaryFunction=twoClassSummary,
-                     classProbs=TRUE,
+                     summaryFunction = twoClassSummary,
+                     classProbs = TRUE,
                      allowParallel = FALSE)
 m_cv_ROC <- train(credit_train[-21], credit_train$default,
       method = "C5.0",
